# miniglog

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
example/: .gitignore
example/jni/: Android.mk  Application.mk  jni_example.cpp
example/jniLibs/armeabi-v7a/: jni_example
example/jniLibs/x86/: jni_example
example/libs/armeabi-v7a/: jni_example
example/libs/x86/: jni_example
example/test/: CMakeCache.txt  CMakeLists.txt  test.cpp
glog/: logging.h
